--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.14",
+    "@headlessui/react": "^2.1.2",
     "axios": "^1.7.3",
+    "framer-motion": "^11.3.21",
     "helmet": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
